# congressional-tech

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  turbo.json
.devcontainer/: Dockerfile  README.md  bashrc  devcontainer.json  post-create.sh
.github/workflows/: bls-cpi-update.yml  update-youtube.yml
1.2-committee-youtube/: fetch_all_youtube_videos.sh
1.2-committee-youtube/web/: committee-dashboard.tsx  index.ts  package.json
5.1-inflation-gsheets/: README.md
app/: .gitignore  .prettierrc  next.config.ts  package-lock.json  package.json
app/public/data/youtube/: youtube_event_id_report.csv
app/src/app/: layout.tsx  page.tsx  providers.tsx
app/src/app/dashboard/: page.tsx
app/src/components/: navigation-bar.tsx
app/src/components/dashboard/: dashboard-content.tsx  donut-text.tsx  leaderboard.tsx  stacked-bar-chart.tsx  title-header.tsx  tree-map.tsx
app/src/components/ui/: chart.tsx
app/src/data/: project-themes.json  proposals.json
app/src/hooks/: use-youtube-event-id-report.tsx
app/src/lib/: parse-csv.ts
apps/committee_youtube/: package.json  pyproject.toml  turbo.json
apps/inflation-gsheets/: fetch-cpi-convert-csv.py  package.json  pyproject.toml  turbo.json
apps/inflation-gsheets/data/: historical-cpi.csv
apps/inflation_gsheets/: package.json  pyproject.toml
apps/inflation_gsheets/src/: fetch-cpi-convert-csv.py
apps/website/: .gitignore  package-lock.json  package.json  tsconfig.json  turbo.json
apps/website/src/app/: globals.css  layout.tsx
docs/: 404.html  README.md  convert_csv_to_md.py  dashboard.html  dashboard.txt  index.html  index.txt  make_markdown_table.py
docs/projects/: I.2.html  I.2.txt  V.1.html  V.1.txt
docs/proposals/: I.html  I.txt  II.html  II.txt  III.html  III.txt  IV.html  IV.txt  V.html  V.txt
projects/1.2-committee-youtube/: .gitattributes  README.md  congress_youtube_db.json  pyproject.toml
projects/1.2-committee-youtube/app/: package.json
projects/1.2-committee-youtube/app/src/app/: layout.tsx
projects/1.2-committee-youtube/congress/: auth.py  fetch.py
projects/1.2-committee-youtube/congress_youtube/congress/: api.py  fetch.py  main.py
projects/1.2-committee-youtube/congress_youtube/congress/fetch/: congress_event_fetcher.py  main.py
projects/1.2-committee-youtube/congress_youtube/youtube/: youtube-accounts.csv
projects/1.2-committee-youtube/congress_youtube/youtube/fetch/: main.py  youtube_event_fetcher.py
projects/1.2-committee-youtube/data/: committee-summaries.json  congress_metadata.json  event_id_report.csv  events.json  house-committee-details.json  youtube-accounts.csv  youtube0.json  youtube1.json  youtube11.json  youtube12.json  youtube5.json  youtube6.json  youtube_00.json  youtube_01.json  youtube_02.json  youtube_03.json  youtube_04.json  youtube_05.json  youtube_06.json  youtube_07.json  youtube_08.json  youtube_09.json  youtube_10.json  youtube_11.json  youtube_12.json  youtube_13.json  youtube_14.json  youtube_15.json  youtube_16.json  youtube_17.json  youtube_event_id_report.csv
projects/1.2-committee-youtube/python/: pyproject.toml
projects/1.2-committee-youtube/python/congress_youtube/: auth.py  globals.py
projects/1.2-committee-youtube/python/congress_youtube/congress/: api.py  json_to_tinydb.py  xml_to_dict.py
projects/1.2-committee-youtube/python/congress_youtube/congress/analyze/: committee.py  committee_details.py  committee_summary.py  main.py
projects/1.2-committee-youtube/python/congress_youtube/congress/fetch/: congress_committee_fetcher.py  congress_event_fetcher.py  main.py
projects/1.2-committee-youtube/python/congress_youtube/youtube/: tables.py
projects/1.2-committee-youtube/python/congress_youtube/youtube/analyze/: main.py
projects/1.2-committee-youtube/python/congress_youtube/youtube/fetch/: main.py  youtube_event_fetcher.py
projects/5.1-inflation-gsheets/: fetch-cpi-convert-csv.py
projects/5.1-inflation-gsheets/data/: historical-cpi.csv
utils/readme_reformatting/: make_markdown_table.py
(+59 files in other folders)
