[project]
name = "inflation-gsheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
start = "inflation-gsheets.fetch-cpi-convert-csv:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "inflation-gsheets"
module-root = ".."
