[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congress_youtube"
version = "0.1.0"
description = "A tool to fetch and process Congressional committee meeting metadata to link to YouTube recordings."
authors = [
  { name="Alex Gurvich", email="alex.b.gurvich@gmail.com" }
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "requests>=2.25.0",
  "lxml>=4.9.0",
  "google-api-python-client>=2.179.0",
  "tinydb"
]

[project.urls]
Homepage = "https://github.com/civictechdc/congressional-tech"

[project.scripts]
congress-fetch= "congress_youtube.congress.fetch.main:parse_args_and_run"
congress-analyze= "congress_youtube.congress.analyze.main:parse_args_and_run"
youtube-fetch= "congress_youtube.youtube.fetch.main:parse_args_and_run"
youtube-analyze= "congress_youtube.youtube.analyze.main:parse_args_and_run"
event-matcher="empty_events:run"